@@ -1,0 +1,31 @@
+<root full="1" version="*1.5.408*" model="MiCasaVerde VeraLite"
+	zwave_heal="1" temperature="C" serial_number="35101252 " fwd1="fwd7.mios.com"
+	fwd2="fwd5.mios.com" ir="0" irtx="" loadtime="1367847753" dataversion="847767579"
+	state="-1" comment="">
+	<sections>
+		<section name="My Home" id="1" />
+	</sections>
+	<rooms>
+		<room name="Office" id="1" section="1" />
+	</rooms>
+	<scenes />
+	<devices>
+		<device name="Danfoss Radiator" altid="10" id="7" category="5"
+			subcategory="2" room="0" parent="1" batterylevel="65" heatsp="20"
+			state="-1" comment="" />
+		<device name="Dimmer" altid="8" id="5" category="2"
+			subcategory="0" room="1" parent="1" level="0" status="0" state="-1"
+			comment="" />
+		<device name="DoorSensor1" altid="14" id="10" category="4"
+			subcategory="3" room="1" parent="1" armed="1" batterylevel="100"
+			status="0" tripped="0" lasttrip="1367848815" state="-1" comment="" />
+		<device name="PIR Sensor1" altid="11" id="8" category="4"
+			subcategory="3" room="1" parent="1" armed="1" batterylevel="100"
+			status="0" tripped="0" lasttrip="1367950241" state="-1" comment="" />
+	</devices>
+	<categories>
+		<categorie name="Dimmable Light" id="2" />
+		<categorie name="Sensor" id="4" />
+		<categorie name="Thermostat" id="5" />
+	</categories>
+</root>
